# sintetizador-dessem

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  genindex.html  index.html  install.html  main.py  objects.inv  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
_downloads/8b706179ad2c3f0270bbe061aeec8f5b/: plot_sintese_operacao.ipynb
_downloads/e271fcb9224c8089f0cb0a57f6b53182/: plot_sintese_execucao.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/apresentacao/: apresentacao.rst.txt
_sources/examples/: index.rst.txt  plot_sintese_execucao.rst.txt  plot_sintese_operacao.rst.txt  sg_execution_times.rst.txt
_sources/geral/: contribuicao.rst.txt  instalacao.rst.txt
_sources/reference/: model.rst.txt
_static/: documentation_options.js
app/: __init__.py  app.py
app/domain/: commands.py
app/internal/: constants.py
app/model/: settings.py
app/services/: handlers.py  unitofwork.py
app/utils/: fs.py  log.py  operations.py  terminal.py
apresentacao/: apresentacao.html
docs/source/: conf.py  install.rst
examples/: README.rst  index.html  plot_sintese_execucao.html  plot_sintese_execucao.py  plot_sintese_operacao.html  plot_sintese_operacao.py  sg_execution_times.html
examples/sintese/: CMO_SBM.parquet  CUSTOS.parquet  GTER_SBM_EST.parquet.gzip  (+7 more)
geral/: contribuicao.html  instalacao.html  tutorial.html
reference/: commands.html  model.html
referencia/: modelo.html  saidas.html
sintetizador/: __init__.py  app.py
tests/: conftest.py
(+46 files in other folders)
